<resources>
    <string name="app_name">Помощник студента</string>
    <string name="year_develop">2022</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="password_hint_confirm">Подтверждение пароля*</string>
    <string name="login_text">Вход</string>
    <string name="reset_password">Отправить пароль</string>
    <string name="password_is_reset">Письмо для восстановления пароля отправлено</string>
    <string name="advice_to_register">Ещё не зарегистрированы?</string>
    <string name="button_register">Регистрация</string>
    <string name="register_button">Зарегестрироваться</string>
    <string name="change_password_button">Изменить пароль</string>
    <string name="advice_to_logIn"> Уже есть аккаунт?</string>
    <string name="message_no_internet">Проверьте подключение к интернету</string>
    <string name="message_input_empty_fields">Заполните пустые поля</string>
    <string name="message_password_is_difficult">Пароли не совпадают</string>
    <string name="message_email_incorrect">Некорректный email</string>
    <string name="not_empty_fields">Обязательно к заполнению</string>
    <string name="alert_dialog_message">Сообщение</string>
    <string name="message_ok">ок</string>
    <string name="message_back_to_main_page">Вернуться на главную</string>
    <string name="something_went_wrong">Что-то пошло не так.. </string>
    <string name="message_invalid_user">Пользователь с данным email не найден</string>
    <string name="message_weak_password"> Пароль должен содержать не меньше 6 символов</string>
    <string name="message_invalid_auth_data"> Неверный email или пароль</string>
    <string name="message_user_with_such_email_exists"> Пользователь с данным email уже существует</string>
    <string name="forgot_password"> Забыли пароль? </string>
    <string name="restore_lose_data"> Восстановить пароль </string>
    <string name="logout"> Выйти </string>
    <string name="forgot_password_ask">Забыли пароль?</string>
    <string name="nav_item_home">Главная</string>
    <string name="nav_item_schedule">Расписание</string>
    <string name="nav_item_schedule_editor">Редактирование</string>
    <string name="nav_item_note">Заметки</string>
    <string name="nav_item_map">Карта</string>
    <string name="tittle_map">Челябинск</string>
    <string name="tittle_map_my_location">Я нахожусь здесь</string>
    <string name="nav_item_create_note">Создание</string>
    <string name="nav_contact_with_developer">Связь с разработчиком</string>
    <string name="nav_feedback">Обратная связь</string>
    <string name="nav_log_out">Выйти</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_expense">Траты</string>
    <string name="nav_add_expense">Добавить траты</string>
    <string name="nav_main">Основное</string>
    <string name="open"> Открыть </string>
    <string name="close">Закрыть</string>
    <string name="addLesson">Добавить пару</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="lesson_name">Предмет</string>
    <string name="lesson_type">Тип занятия</string>
    <string name="lesson_teacher">Преподаватель</string>
    <string name="lesson_cabinet">Аудитория</string>
    <string name="lesson_number">Номер пары</string>
    <string name="lesson_start_time">00:00</string>
    <string name="lesson_end_time">00:00</string>
    <string name="lesson_tittle">Пара</string>
    <string name="lesson_type_lecture">Лекция</string>
    <string name="lesson_type_practice">Практика</string>
    <string name="message_empty_list_lessons">Сегодня выходной</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="test_email"> user@mail.ru </string>
    <string name="first_week"> 1 неделя </string>
    <string name="second_week"> 2 неделя </string>
    <string name="password_is_changed_success"> Пароль изменён </string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="note_title_hint">Заголовок</string>
    <string name="note_subtitle_hint">Подзаголовок</string>
    <string name="note_hint">Текс заметки</string>
    <string name="delete_note">Удалить заметку</string>
    <string name="add_image_note">Добавить изображение</string>

    <string name="personal_account_delete">Аккаунт удален</string>
    <string name="personal_account_switch_notification">Разрешить уведомления о парах</string>
    <string name="personal_account_switch_change_week">Переключить на 2 неделю</string>
    <string name="personal_account_switch_exams_period">Включить период сессии</string>
    <string name="personal_account_add_pic">Загрузить фото</string>
    <string name="personal_account_name">Имя</string>
    <string name="personal_account_delete_schedule">Удалить расписание</string>
    <string name="personal_account_change_account">Изменить пароль</string>
    <string name="personal_account_delete_account">Удалить аккаунт</string>
    <string name="map_corpus">Корпусы</string>
    <string name="map_library">Библиотеки</string>
    <string name="map_dormitory">Общежитие</string>
    <string name="expense_category">Категория</string>
    <string name="expense_details">Подробнее</string>
    <string name="expense_food">Еда</string>
    <string name="expense_shopping">Покупки</string>
    <string name="expense_transport">Транспорт</string>
    <string name="expense_health">Здоровье</string>
    <string name="expense_other">Другое</string>
    <string name="expense_education">Учёба</string>
    <string name="expense_money">Сумма</string>
    <string name="expense_date">Дата</string>
    <string name="expense_more_details">Детали покупки</string>
    <string name="expense_add">Добавить</string>
    <string name="expense_month">Бюджет на месяц</string>
    <string name="expense_current">Текущая сумма затрат</string>
    <string name="expense_recent">Недавние траты</string>
    <string name="expense_change_money">Изменить бюджет</string>
    <string name="expense_full_date">%1$s %2$s %3$s</string>
    <string name="expense_month_budget">%1$s ₽ </string>
    <string name="expense_month_current">%1$s ₽ </string>
    <string name="welcome_message_expenses">Нажми меня!</string>
    <string name="welcome_subtitle_message_note">Добавьте первую заметку нажав на кнопку</string>
    <string name="welcome_subtitle_message_schedule">Добавьте первую пару нажав на кнопку</string>
    <string name="welcome_subtitle_message_expenses">Добавьте первую покупку нажав на кнопку</string>
    <string name="welcome_subtitle_message_expenses_add_budget">Прежде чем добавить покупку, введите Ваш бюджет на месяц..</string>
    <string name="email_sending">Написать письмо..</string>
    <string name="rate_us">Оцените наше приложение</string>
    <string name="rate_us_now">Оценить</string>
    <string name="rate_us_later">Позже</string>
    <string name="rate_us_note">Напишите отзыв</string>
    <string name="sending_success">Отзыв отправлен!</string>
    <string name="message_delete_schedule">Удалить расписание</string>
    <string name="confirm_action">Подтвердить</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Расписание</string>
    <string name="configure">Configure</string>
    <string name="divider">-</string>
    <string name="widget_header_icon">widget_header_icon</string>
</resources>