<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/nav_main">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/nav_item_home" />
            <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_log_out" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_book"
        android:title="@string/nav_item_schedule" />
    <item
        android:id="@+id/notesFragment"
        android:icon="@drawable/ic_note"
        android:title="@string/nav_item_note" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_item_map" />

    <item
        android:id="@+id/expenseFragment"
        android:icon="@drawable/ic_analytics"
        android:title="@string/nav_expense" />

    <item android:title="@string/nav_feedback">
        <menu>
            <item
                android:id="@+id/nav_about_developer"
                android:icon="@drawable/ic_star_rate"
                android:title="@string/nav_contact_with_developer" />
        </menu>
    </item>
</menu>