<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/categoryTittle"
            style="@style/tittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/expense_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:columnCount="3"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryTittle">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/food"
                style="@style/categoriesExpense"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:text="@string/expense_food"
                app:icon="@drawable/food" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/shopping"
                style="@style/categoriesExpense"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:text="@string/expense_shopping"
                app:icon="@drawable/shopping" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/transport"
                style="@style/categoriesExpense"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:text="@string/expense_transport"
                app:icon="@drawable/transport" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/health"
                style="@style/categoriesExpense"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:text="@string/expense_health"
                app:icon="@drawable/health" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/others"
                style="@style/categoriesExpense"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:text="@string/expense_other"
                app:icon="@drawable/other" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/academics"
                style="@style/categoriesExpense"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:text="@string/expense_education"
                app:icon="@drawable/education" />
        </GridLayout>

        <TextView
            android:id="@+id/moreInfoTittle"
            style="@style/tittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/expense_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/note_title_hint"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/moreInfoTittle"
            app:startIconDrawable="@drawable/ic_edit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/money"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/expense_money"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:startIconDrawable="@drawable/ic_ruble">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_money"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/expense_date"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/money"
            app:startIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:focusable="false"
                android:fontFamily="@font/roboto_condensed_light"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/expense_more_details"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_note"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLength="300" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/expense_add"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>