<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/indicator"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:background="@color/teal_200"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lesson_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/lesson_start_time"
        android:textSize="@dimen/middle_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lesson_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/lesson_end_time"
        android:textSize="@dimen/middle_text_size"
        android:layout_marginTop="@dimen/small_margin"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lesson_start_time"
        app:layout_constraintTop_toBottomOf="@+id/lesson_start_time" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="lesson_start_time, lesson_end_time" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lesson_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/lesson_name"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lesson_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/lesson_type"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/lesson_tittle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lesson_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/lesson_teacher"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/lesson_type"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lesson_cabinet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/lesson_cabinet"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/lesson_teacher" />
</androidx.constraintlayout.widget.ConstraintLayout>