<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/little_margin">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lesson_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/little_margin"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/lesson_tittle"
        android:textSize="@dimen/middle_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lesson_name"
        style="@style/material_text_field"
        android:layout_marginTop="@dimen/little_margin"
        android:background="@android:color/transparent"
        android:hint="@string/lesson_name"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_tittle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lesson"
            style="@style/material_text_field"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/normal_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teacherName"
        style="@style/material_text_field"
        android:layout_marginTop="@dimen/little_margin"
        android:background="@android:color/transparent"
        android:hint="@string/lesson_teacher"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teacher"
            style="@style/material_text_field"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/normal_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/typeOfLesson"
        android:layout_marginTop="@dimen/little_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherName"
        android:checkedButton="@+id/lecture"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/lecture"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        style="@style/material_text_field"
        android:text="@string/lesson_type_lecture"/>
    <RadioButton
        android:id="@+id/practice"
        style="@style/material_text_field"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/lesson_type_practice"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cabinetNumber"
        style="@style/material_text_field"
        android:layout_marginTop="@dimen/little_margin"
        android:background="@android:color/transparent"
        android:hint="@string/lesson_cabinet"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOfLesson">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cabinet"
            style="@style/material_text_field"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/normal_text_size" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>