<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.graduateproject.main.MainFragment"
        android:label="@string/nav_item_home"
        tools:layout="@layout/fragment_main_screen" />

    <fragment
        android:id="@+id/lessonsFragment"
        android:name="com.example.graduateproject.schedule.lessons.LessonsFragment"
        android:label="fragment_lessons"
        tools:layout="@layout/fragment_lessons" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.graduateproject.schedule.main.ScheduleFragment"
        android:label="@string/nav_item_schedule"
        tools:layout="@layout/schedule_fragment">
        <action
            android:id="@+id/toLessonsEditor"
            app:destination="@id/nav_lessons_editor" />
    </fragment>

    <fragment
        android:id="@+id/nav_lessons_editor"
        android:name="com.example.graduateproject.schedule.editor.LessonsEditorFragment"
        android:label="@string/nav_item_schedule_editor"
        tools:layout="@layout/fragment_lessons_editor">
        <action
            android:id="@+id/toSchedule"
            app:destination="@id/nav_schedule" />
        <argument
            android:name="lesson"
            app:argType="com.example.graduateproject.schedule.model.Lesson"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_lesson"
        android:name="com.example.graduateproject.schedule.editor.add.AddLessonFragment"
        android:label="@string/nav_item_schedule_add"
        tools:layout="@layout/add_lesson_fragment"/>
        <action
            android:id="@+id/toSchedule"
            app:destination="@id/nav_schedule" />
</navigation>